--- a/src/Components/AddForm/AddForm.css
+++ b/src/Components/AddForm/AddForm.css
@@ -24,10 +24,10 @@ h2{
 
 .submit-btn {
     border: none;
-    background: green;
+    background: #D8AE7E;
     padding: 10px;
     font-size: 18px;
-    color: #fff;
+    color: #000;
     cursor: pointer;
     margin-left: 10px;
     font-weight: 600;
