--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,10 +3,11 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px;
+    padding: 5px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
     font-size: 24px;
     font-weight: 600;
+    background: #D8AE7E;
 }
 
 .logo {
