--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -7,18 +7,20 @@ header {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
     font-size: 24px;
     font-weight: 600;
-    background: #D8AE7E;
+    background: #d8ae7e;
 }
 
 .logo {
     display: flex;
     align-items: center;
     cursor: pointer;
+    color: #f4f8d3;
 }
 
 .theme-container span {
     margin-bottom: 100px;
     margin-left: 10px;
+    color: #f4f8d3;
 }
 
 .theme-container .icon {
